[lib]
name = "mongodb_manager"
path = "src/mongodb/mod.rs"

[package]
name = "hello-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
mongodb = "2.8.0"
tokio = { version = "1", features = ["full"] }
